--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <h1>Me perdonas????</h1>
+    <h1>Me perdonas?</h1>
     <main id="main">
       <div class="buttons">
         <div>
