--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <h1>Me perdonas?</h1>
-    <main id="main">
-      <div class="buttons">
-        <div>
-          <button id="yes">SI</button>
-          <button id="no" class="no">NO</button>
-        </div>
-        <div class="random" id="random"></div>
-      </div>
-    </main>
-    <dialog id="dialog">
-      Gracias por perdonarme, te amo con todo mi corazon Daniela
-    </dialog>
+    <h1>TE AMO</h1>
   </body>
 </html>
